<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">米拉</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="main_home">首页</string>
    <string name="main_news">商家</string>
    <string name="main_my_info">消息</string>
    <string name="menu_search">社区</string>
    <string name="more">更多</string>
    <string name="check_out">结算</string>    
    <string name="title_shopping_cart">购物车</string>    
    
    <string name="draft_separator">,\u0020</string>
    <string name="has_draft">Draft</string>
    <string name="no_conversations">No conversations xx.</string>    
    <string name="mila_msg">mila message</string>    
    <string name="mila_reply">请输入</string>    
    <string name="mila_send">发送</string>   
    
    <string name="pull_to_refresh_pull_label">下拉刷新</string>
    <string name="pull_to_refresh_release_label">松开后刷新</string>
    <string name="pull_to_refresh_refreshing_label">刷新\u2026</string>
    <string name="pull_to_refresh_footer_release_label">松开后加载</string>
    <string name="pull_to_refresh_footer_pull_label">上拉加载更多</string>
    <string name="pull_to_refresh_footer_refreshing_label">加载中\u2026</string>
    <string name="app_list_header_refresh_down">下拉刷新</string>
    <string name="app_list_header_refreshing">正在刷新</string>
    <string name="app_list_header_refresh_up">松开刷新</string>
    <string name="app_list_header_refresh_last_update">上次更新于:%s</string>
    <string name="app_list_footer_more">更多</string>
    <string name="app_list_footer_loading">正在加载</string>
</resources>