<?xml version="1.0" encoding="utf-8"?>
<TabHost xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@android:id/tabhost"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff" >

    <LinearLayout
    	android:orientation="vertical"
    	android:layout_width="fill_parent"
    	android:layout_height="fill_parent">
    	<FrameLayout 
    		android:id="@android:id/tabcontent"
    		android:layout_width="fill_parent"
    		android:layout_height="0.0dip"
    		android:layout_weight="1.0"/>
   	   <FrameLayout
          android:layout_width="fill_parent"
	      android:background="@drawable/maintab_toolbar_bg"
          android:layout_height="wrap_content" >
	    	   
	    	<TabWidget  
	    		android:id="@android:id/tabs"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:layout_weight="0.0"
	    		android:visibility="gone"/>
	    	<RadioGroup
	    		android:id="@+id/main_tab"
	    		android:orientation="horizontal"
	    		android:layout_width="fill_parent"
	    		android:layout_height="wrap_content"
	    		android:gravity="center_vertical"
	    		android:layout_gravity="center">
	    		<RadioButton 
	    			android:layout_width="fill_parent"
					android:layout_height="fill_parent"
	    			android:text="@string/main_home"
	    			android:drawableTop="@drawable/icon_1"
	    			android:id="@+id/radio_button0"
	    			android:checked="true"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_width="fill_parent"
					android:layout_height="fill_parent"
	    			android:text="@string/main_news"
	    			android:drawableTop="@drawable/icon_2"
	    			android:id="@+id/radio_button1"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_width="fill_parent"
					android:layout_height="fill_parent"
	    			android:text="@string/main_my_info"
	    			android:drawableTop="@drawable/icon_3"
	    			android:id="@+id/radio_button2"
	    			style="@style/main_tab_bottom"/>
	    		
	    		<RadioButton 
	    			android:layout_width="fill_parent"
					android:layout_height="fill_parent"
	    			android:text="@string/menu_search"
	    			android:drawableTop="@drawable/icon_4"
	    			android:id="@+id/radio_button3"
	    			style="@style/main_tab_bottom"/>
	    		<RadioButton 
	    			android:layout_width="fill_parent"
					android:layout_height="fill_parent"
	    			android:text="@string/more"
	    			android:drawableTop="@drawable/icon_5"
	    			android:id="@+id/radio_button4"
	    			style="@style/main_tab_bottom"/>
	    	</RadioGroup>
	 	<TextView
	            android:id="@+id/badge_view_message"
	            android:layout_width="wrap_content"
	            android:layout_height="fill_parent"
	            android:gravity="center"
	            android:minHeight="30dp"
	            android:layout_gravity="center_horizontal"
	            />
    	</FrameLayout> 
    </LinearLayout>
</TabHost>
